--- a/TODO.txt
+++ b/TODO.txt
@@ -1,12 +1,13 @@
-User Interface
+## General
 
-- Double click to start download
+- Add a License
+
+## User Interface
+
 - Allow to sort columns in CLient's view table
 
+## Code Refactoring
 
-Code Refactoring
-
-- ClientViewController.h : should use an enum with const values
 - ClientViewController.m : Better error handling
 - ClientViewController.m : Review regex used for parsing Client's ouput (file list)
 
